# SnakeGame

./: CMakeLists.txt  README.md  direction.cpp  direction.h  game.cpp  game.h  gameover.cpp  gameover.h  goal.cpp  goal.h  main.cpp  player.cpp  player.h  point.cpp  point.h  score.cpp  score.h
BuildFiles/: CMakeCache.txt  Makefile  SNAKE_GAME.cbp  cmake_install.cmake
